--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
     "vite-svg-loader": "^4.0.0",
