--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vuelidate/core": "^2.0.0",
-    "@vuelidate/validators": "^2.0.0",
+    "@formkit/themes": "^0.16.4",
+    "@formkit/vue": "^0.16.4",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
     "vite-svg-loader": "^4.0.0",
